# who_lets_my_dog_out

./: .gitignore  README.md  settings.gradle
Mockup/Assets/: logo_dog.afphoto  logo_dog_with_name.afphoto  logo_name.afphoto  logo_name_with_shorting.afphoto  logo_shorting.afphoto
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: background_grey_100.xml  ic_edit_background_round.xml  ic_launcher_foreground.xml  ic_logo_splash.xml  messages_my.xml  messages_their.xml  messages_their_name.xml  messages_user_button.xml  profil_edit_button.xml  rounded_corner_button.xml  rounded_corner_login_edittext.xml  (+2 more)
backend/: README.rst  pyproject.toml
backend/backend/: __init__.py  __main__.py
backend/backend/database/: db.py
backend/backend/routes/: chat.py  dog.py  login.py  user.py
gradle/wrapper/: gradle-wrapper.properties
who_lets_my_dog_out_frontend/: README.md  pubspec.yaml
who_lets_my_dog_out_frontend/android/app/: build.gradle
who_lets_my_dog_out_frontend/ios/Runner/: Info.plist
who_lets_my_dog_out_frontend/ios/Runner.xcodeproj/: project.pbxproj
who_lets_my_dog_out_frontend/lib/: bottomNavi.dart  main.dart
who_lets_my_dog_out_frontend/lib/models/: route_generator.dart
who_lets_my_dog_out_frontend/lib/screens/: chatPage.dart  homePage.dart  profilPage.dart
who_lets_my_dog_out_frontend/test/: widget_test.dart
who_lets_my_dog_out_frontend/web/: index.html  manifest.json
who_lets_my_dog_out_frontend/windows/: CMakeLists.txt
who_lets_my_dog_out_frontend/windows/runner/: Runner.rc  main.cpp
(+108 files in other folders)
