[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Wambo04 <Timo.Kohlmeier@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
